# aragog

./: .gitignore  .gitlab-ci.yml  CHANGELOG.md  Cargo.toml  LICENSE  README.md  book.toml
aragog_cli/: CHANGELOG.md  Cargo.toml  Dockerfile  README.md
aragog_cli/example/: example_migration.yaml  schema.yaml
aragog_cli/example/db/: 1607086442993_test_mig3.yaml
aragog_cli/example/migrations/: 1607086438694_test_mig.yaml  1607086441088_test_mig2.yaml  1607086442993_test_mig3.yaml  1607336998119_new_graph.yaml  1612197498618_ttlindex.yaml
aragog_cli/src/: app.rs  cli.yaml  completions.rs  config.rs  describe.rs  discover.rs  error.rs  log_level.rs  main.rs  migration.rs  migration_data.rs  migration_manager.rs  migration_operation.rs  versioned_database.rs
aragog_macros/: CHANGELOG.md  Cargo.toml  LICENSE  README.md
aragog_macros/src/: lib.rs  parse_attribute.rs  parse_operation.rs  symbol.rs  to_tokenstream.rs  toolbox.rs
aragog_macros/src/derives/: edge_record.rs  mod.rs  record.rs  validate.rs
aragog_macros/src/derives/record/: collection_attribute.rs  hook.rs  hook_data.rs  hooks_container.rs  mod.rs  operation.rs
aragog_macros/src/derives/validate/: command.rs  mod.rs  operation.rs
book/: README.md  SUMMARY.md  arangodb.md  db_pool.md  edge.md  installation.md  introduction.md  query.md  record.md  transactions.md  validate.md
book/edge_record_struct/: index.md
book/edge_record_trait/: index.md  technical_notes.md
book/init/: db_connection.md  db_pool.md  index.md  schema_generation.md  technical_notes.md
book/query_engine/: index.md  query_object.md  technical_notes.md  traversal_query.md
book/record_trait/: hooks.md  index.md  technical_notes.md
book/transactions/: custom_transactions.md  index.md  safe_execute.md  technical_notes.md
book/validate_trait/: index.md  technical_notes.md
docs/aragog-docs/: nuxt.config.js  package-lock.json  package.json
docs/aragog-docs/assets/css/: _vars.scss  main.scss
docs/aragog-docs/components/elements/burger-button/: burger-button.vue
docs/aragog-docs/components/elements/button/: button.vue
docs/aragog-docs/components/elements/examples-codes/: examples-codes.vue  index.ts
docs/aragog-docs/components/modules/footer/: footer.i18n.yml  footer.vue
docs/aragog-docs/components/modules/menu/: menu-desktop.vue  menu-mobile.vue  menu.i18n.yml
docs/aragog-docs/config/i18n/: config.js
docs/aragog-docs/layouts/: default.vue
docs/aragog-docs/pages/: community.i18n.yml  community.vue  index.i18n.yml  index.vue  legal-notices.i18n.yml  legal-notices.vue
examples/boxed_example/: README.md  boxed_connection.rs  boxed_pool.rs  main.rs  schema.yaml
examples/boxed_example/models/: user.rs
examples/graph_example/: Cargo.toml  README.md  main.rs  schema.yaml
examples/graph_example/models/: characters.rs  child_of.rs  mod.rs
examples/graph_example/src/: main.rs  schema.json
examples/graph_example/src/models/: characters.rs  child_of.rs  mod.rs
examples/simple_app/: Cargo.toml  main.rs
examples/simple_app/models/: dish.rs  order.rs  user.rs
examples/simple_app/src/: main.rs  schema.json
examples/simple_app/src/models/: dish.rs  mod.rs  order.rs  user.rs
examples/simple_example/: README.md  main.rs  schema.yaml
examples/simple_example/models/: dish.rs  mod.rs  order.rs  user.rs
examples/simple_food_order_app/: main.rs
examples/simple_food_order_app/models/: dish.rs  mod.rs  order.rs
examples/transaction_example/: README.md  main.rs  schema.yaml
examples/transaction_example/models/: dish.rs  mod.rs
src/: authenticate.rs  authorize_action.rs  edge_record.rs  error.rs  foreign_link.rs  lib.rs  link.rs  new.rs  record.rs  undefined_record.rs  update.rs  validate.rs
src/db/: database_access.rs  database_collection.rs  database_connection.rs  database_connection_builder.rs  database_connection_pool.rs  database_connection_pool_builder.rs  database_record.rs  database_record_dto.rs  database_service.rs  edge_model.rs  mod.rs  operation_options.rs
src/db/transaction/: mod.rs  transaction_builder.rs  transaction_connection.rs  transaction_output.rs  transaction_pool.rs
src/error/: arango_error.rs  arango_http_error.rs  database_error.rs  mod.rs
src/helpers/: json_helper.rs  mod.rs  string_validators.rs
src/query/: comparison.rs  filter.rs  graph_query.rs  mod.rs  operations.rs  query.rs  query_cursor.rs  query_id_helper.rs  query_item.rs  query_result.rs  utils.rs
src/schema/: collection_schema.rs  database_schema.rs  graph_schema.rs  index_schema.rs  mod.rs
tests/: authenticate.rs  authorize_action.rs  common.rs  database_connection.rs  database_record.rs  db_pool.rs  edge_record.rs  error.rs  new.rs  query.rs  query_item.rs  record.rs  relation.rs  schema.json  schema.yaml  transactions.rs  update.rs  validate.rs
