[package]
name = "aragog"
version = "0.13.1"
authors = [
    "Felix de Maneville: <felix.maneville@gmail.com>",
    "Qonfucius team <felix.maneville@qonfucius.team>"
]
edition = "2018"
description = "A simple lightweight object-document mapper for ArangoDB"
keywords = ["ArangoDB", "Arango", "ORM", "ODM", "OGM"]
exclude =  ["tests", ".gitlab-ci.yml", ".gitignore", "examples", "book", "docs", "book.toml"]
categories = ["web-programming", "database"]
license = "MIT"
readme = "README.md"
repository = "https://gitlab.com/qonfucius/aragog"
documentation = "https://docs.rs/aragog"

[features]
default = ["derive", "async"]
async = ["arangors/reqwest_async"]
blocking = ["arangors/blocking", "arangors/reqwest_blocking", "maybe-async/is_sync", "aragog-macros/blocking"]
entreprise = ["arangors/enterprise"]
derive = ["aragog-macros"]
minimal_traits = []

[dependencies]
# ArangoDB driver
arangors = { version = "0.4.8", default-features = false, features = ["rocksdb"] }
# Used for string validation toolbox, not used otherwise
regex = "1.5"
# Record trait has async methods
async-trait = "0.1"
# Serialization and deserialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.8"
# Log handling
log = "0.4"
# Error definitions
thiserror = "1.0"
# Numeric types for query engine
num = "0.4"
# Self depedencies
maybe-async = "0.2"

# Optional crates
# The aragog derive macros
aragog-macros = { path = "aragog_macros", version = "0.7", optional = true }

[dev-dependencies]
# We add the "feature" option to avoid serde version conflict somehow
# TODO: remove this dependency
chrono = { version = "0.4", features = ["serde"] }
# Used by examples:
env_logger = "0.9"

[dev-dependencies.tokio]
version = "0.2"
features = [ "macros", "rt-core"]

[badges.maintenance]
status = "actively-developed"

[workspace]
members = [
    "aragog_cli"
]