[package]
name = "aragog"
version = "0.14.0"
authors = [
    "Felix de Maneville: <felix.maneville@gmail.com>",
    "Qonfucius team <felix.maneville@qonfucius.team>"
]
edition = "2018"
description = "A simple lightweight object-document mapper for ArangoDB"
keywords = ["ArangoDB", "Arango", "ORM", "ODM", "OGM"]
exclude =  ["tests", ".gitlab-ci.yml", ".gitignore", "examples", "book", "docs", "book.toml"]
categories = ["web-programming", "database"]
license = "MIT"
readme = "README.md"
repository = "https://gitlab.com/qonfucius/aragog"
documentation = "https://docs.rs/aragog"
homepage = "https://aragog.rs"

[features]
default = ["derive", "async"]
async = ["arangors/reqwest_async", "uclient/async_reqwest"]
async_rustls = ["async", "arangors/reqwest_async_rustls", "uclient/async_reqwest_rustls"]
blocking = ["arangors/reqwest_blocking", "maybe-async/is_sync", "aragog-macros/blocking", "uclient/blocking_reqwest"]
blocking_rustls = ["blocking", "arangors/reqwest_blocking_rustls", "uclient/blocking_reqwest_rustls"]
entreprise = ["arangors/enterprise"]
derive = ["aragog-macros"]
minimal_traits = []

[dependencies]
# ArangoDB driver
arangors = { version = "0.5", default-features = false, features = ["rocksdb"] }
# TODO: remove this when arangors fixes https://github.com/fMeow/arangors/issues/79
typed-builder = "=0.9.0"
# Required until re-exported from arangors crate, latest version (0.2.3) is not compatible
uclient = "0.1.3"

# Used for string validation toolbox, not used otherwise
regex = "1.5"

# Record trait has async methods
async-trait = "0.1"

# Serialization and deserialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.8"

# Log handling
log = "0.4"

# Error definitions
thiserror = "1.0"

# Numeric types for query engine
num = "0.4"

# Self depedencies
maybe-async = "0.2"

# Optional crates
# The aragog derive macros
aragog-macros = { path = "aragog_macros", version = "0.7.2", optional = true }

[dev-dependencies]
# We add the "feature" option to avoid serde version conflict somehow
# TODO: remove this dependency
chrono = { version = "0.4", features = ["serde"] }
# Used by examples:
env_logger = "0.9"

[dev-dependencies.tokio]
version = "1"
features = [ "macros", "rt-multi-thread"]

[badges.maintenance]
status = "actively-developed"

[workspace]
members = [
    "aragog_cli"
]